<resources>
    <string name="app_name">Bet Manager</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ongoing_bets">Ongoing</string>
    <string name="completed_bets">Completed</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="create_new_bet">New Bet</string>
    <string name="title">Title:</string>
    <string name="your_bet">Your bet</string>
    <string name="betting_against">Betting Against</string>
    <string name="opponents_bet">His/Her bet</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="done">Done</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="bet_created_message">Your bet has been created!</string>
    <string name="undo">Undo</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="contacts_delete_confirmation_text">Deleting this contact will remove all bets associated with the contact as well. Do you want to continue?</string>
    <string name="alert_dialog_cancel">CANCEL</string>
    <string name="alert_dialog_delete">DELETE</string>
    <string name="alert_dialog_edit">EDIT</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="name">Name</string>
    <string name="bets_image_view">Bets image view</string>
    <string name="changeToOngoing">Bet status has been changed to ongoing.</string>
    <string name="changeToCompleted">Bet status has been changed to completed.</string>
    <string name="bet_delete_confirmation_text">Are you sure that you want to delete this bet?</string>
    <string name="edit_bet">Edit Bet</string>
    <string name="unable_to_get_permission">Please allow for READ CONTACTS permission in order to use this feature.</string>
</resources>
