<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_contact_name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/name"
        android:theme="@style/TextLabelInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_contact_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/cancel_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/alert_dialog_cancel"
        app:layout_constraintEnd_toStartOf="@+id/edit_textview"
        app:layout_constraintTop_toBottomOf="@+id/edit_contact_name_input_layout"
        app:layout_constraintBottom_toBottomOf="@id/edit_textview"/>

    <TextView
        android:id="@+id/edit_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:text="@string/alert_dialog_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancel_textview"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>